# cplus

./: .gitattributes  .gitignore  CODE_INSPECTION_REPORT.md  CPLUS_VS_RUST.md  Cargo.toml  LICENSE  PROJECT_WRITEUP.md  README.md  SKILL.md  bench.md  bootstrap.md  c_cplus_cplusplus.md  changeslog.md  hello  llvm.md  mem.md  naming_guideline.md  plan-0.0.10.md  plan-0.0.11.md  plan-0.0.12.md  plan-0.0.2.md  plan-0.0.3.md  plan-0.0.4.md  plan-0.0.6.md  plan-0.0.8.md  plan-0.0.9.md  plan.agent.md  plan.appkit.md  plan.asm.md  plan.gpu.md  plan.graph.md  plan.jni.md  plan.md  plan.opaque.md  plan.own.md  plan.simd.md  pm.md  realtime.md  refac.txt  research.md  (+8 more)
.github/homebrew/: cplus.rb.in
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  homebrew.yml  linux-deb.yml  release.yml
bench/: arr.c  arr.cplus  fib.c  fib.cplus  run.sh  sanity.sh  sum.c  sum.cplus
bugs/match-if-arm-enum-ctor/: Cplus.toml  README.md
bugs/string-param-store-double-free/: Cplus.toml  README.md
cpc/: Cargo.toml
cpc-bindgen/: Cargo.toml  LIMITATIONS.md  README.md
cpc-bindgen/src/: framework.rs  main.rs  objc.rs  swift.rs
cpc-lsp/: Cargo.toml
cpc-lsp/src/: main.rs
cpc-lsp/tests/: e2e.rs
cpc-wasm/: Cargo.toml  INTEGRATION.md  README.md
cpc-wasm/demo/: index.html
cpc-wasm/src/: lib.rs
cpc/src/: hello.ll  main.rs  mcp.rs
cpc/tests/: cli_scaffold.rs  e2e.rs  wasm_differential.rs
cplus-core/: Cargo.toml
cplus-core/src/: ast.rs  atomic.rs  attrs.rs  borrowck.rs  codegen.rs  diagnostics.rs  docgen.rs  doctest.rs  fmt.rs  graph.rs  lexer.rs  lib.rs  lower.rs  manifest.rs  monomorphize.rs  parser.rs  resolver.rs  sema.rs  target.rs  wasm_emit.rs
cplus-core/tests/: wasm_slice.rs
cplus-pm/: Cargo.toml  README.md
cplus-pm/src/: cli.rs  fetch.rs  hash.rs  id.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  resolve.rs  solver.rs  vendor.rs  version.rs
cplus-pm/tests/: v0_1.rs
docs/: COMPILER.md  ERRORS.md  GPU.md  MEMORY-MODEL.md  SKILL.md  SPEC.md  errors.toml  gen_errors.py
docs/design/: diagnostics.md  error-handling.md  named-params-and-defaults.md  phase1-grammar.md  phase11-fn-pointers.md  phase2-arrays.md  phase2-enums.md  phase2-methods.md  phase2-packages-mvp.md  phase2-structs.md  phase2-types.md  phase3-copy-derivation.md  phase3-drop.md  phase3-ownership.md  phase3-tagged-unions.md  phase4-fmt.md  phase4-lsp.md  phase4-modules.md  phase4-pattern-let.md  phase5-attributes.md  phase5-borrow-shared.md  phase5-c-abi-export.md  phase5-doctests.md  phase6-borrow-exclusive.md  phase7-generics.md  phase8-string-interpolation.md  v0.0.6-external-package-enable.md  v0.0.8-bench-gap-investigation.md
docs/examples/: array_struct.cplus  array_sum.cplus  c_for.cplus  char_literal.cplus  const_static_basic.cplus  copy_struct.cplus  defer_basic.cplus  defer_drop.cplus  direction.cplus  drop_basic.cplus  drop_move.cplus  factorial.cplus  fibonacci.cplus  fizzbuzz.cplus  float_arith.cplus  guard_let_chain.cplus  guard_let_complement.cplus  if_let_basic.cplus  loops.cplus  maybe.cplus  methods.cplus  mixed_ints.cplus  mutable_struct.cplus  nested.cplus  owned_string.cplus  ownership.cplus  phase10_ffi.cplus  phase11_fn_pointers.cplus  phase11_size_of.cplus  phase11_vec_allocator.cplus  phase11_vec_generic.cplus  phase7_generics.cplus  phase8_interpolation.cplus  point.cplus  pointer_to_int_cast.cplus  shape.cplus  sum_range.cplus  uninit_init.cplus  unsigned.cplus  veci32_invalidation.cplus  (+1 more)
editors/vscode/: README.md  extension.js  package-lock.json  package.json
objc-c-interop/: .gitignore  build.sh  hello_appkit_c.c  notes.md
objc-c-interop/cocoa-min/: .gitignore  README.md  (+2 more)
proves/: README.md
test_project/: Cplus.toml
(+107 files in other folders)
