[package]
name = "cpc-wasm"
version = "0.0.24"
edition = "2021"
description = "WASM front end for the C+ web playground (cplus-lang.dev): source -> diagnostics + LLVM IR, client-side."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cplus-core = { path = "../cplus-core" }
wasm-bindgen = "0.2"
serde_json = "1"
# Assemble the emitted WAT to a runnable wasm module *inside* this blob (pure
# Rust, compiles to wasm32), so the browser playground needs no separate
# wat2wasm / wabt download — `cplus_run` returns ready-to-instantiate bytes.
wat = "1"
