[package]
name = "cpc"
version = "0.0.15"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "cpc"
path = "src/main.rs"

[dependencies]
cplus-core = { path = "../cplus-core" }
serde_json = "1"
tempfile = { workspace = true }

[dev-dependencies]
serde_json = "1"
tempfile = { workspace = true }
