[package]
name = "cplus-core"
version = "0.0.26"
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
# wasm playground slice (plans/plan.wasm-playground.md): assemble the emitted
# WAT (`wat`) and run it in a pure-Rust interpreter (`wasmi`) so the
# compile→assemble→run path is verified in CI with no browser or toolchain.
wat = "1"
wasmi = "0.31"
