[package]
name = "cplus-pm"
version = "1.0.0"
edition.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "cplus-pm"
path = "src/main.rs"

[dependencies]
pubgrub = "0.4.0"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
